[Cocoa] CTParagraphStyle leak under WebCore::LinkImageLayout::LinkImageLayout https://bugs.webkit.org/show_bug.cgi?id=174228

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2017-07-06
Reviewed by Andreas Kling.

* platform/mac/DragImageMac.mm:
(WebCore::LinkImageLayout::LinkImageLayout):

Canonical link: https://commits.webkit.org/191069@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@219226 268f45cc-cd09-0410-ab3c-d52691b4dbfc